fix alignment

--- a/src/styles/fable.css
+++ b/src/styles/fable.css
@@ -45,13 +45,13 @@
 	}
 
 	&.top {
-		align-items: start;
+		align-content: start;
 	}
 	&:not(.top, .bottom).center {
-		align-items: center;
+		align-content: center;
 	}
 	&.bottom {
-		align-items: end;
+		align-content: end;
 	}
 
 	&.left {
